--- a/package.json
+++ b/package.json
@@ -13,22 +13,13 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
     "@types/react-native": "~0.70.6",
-    "expo": "^47.0.0",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-web": "~0.18.7",
-    "typescript": "^4.6.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
     "@storybook/addon-actions": "^6.5.0",
     "@storybook/addon-controls": "^6.5.0",
     "@storybook/addon-essentials": "^6.5.0",
@@ -40,8 +31,35 @@
     "@storybook/addon-react-native-web": "^0.0.19",
     "@storybook/react": "^6.5",
     "@storybook/react-native": "6.0.1-beta.9",
+    "@storybook/addon-a11y": "^6.5.0",
+    "@storybook/addon-interactions": "^6.5.0",
+    "@storybook/addon-jest": "^6.5.0",
+    "@storybook/addon-storysource": "^6.5.0",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/docs-tools": "^6.5.0",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.0",
     "babel-loader": "^8.2.3",
-    "babel-plugin-react-native-web": "^0.18.10"
+    "babel-plugin-react-native-web": "^0.18.10",
+    "expo": "^47.0.0",
+    "expo-status-bar": "~1.4.2",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-web": "~0.18.7",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "storybook-addon-designs": "^6.3.1",
+    "storybook-addon-grid": "^0.3.1",
+    "storybook-addon-pseudo-states": "^1.15.2",
+    "storybook-usage": "^4.0.10",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
