--- a/package.json
+++ b/package.json
@@ -20,26 +20,25 @@
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
     "@types/react-native": "~0.70.6",
-    "@storybook/addon-actions": "^6.5.0",
-    "@storybook/addon-controls": "^6.5.0",
-    "@storybook/addon-essentials": "^6.5.0",
-    "@storybook/addon-links": "^6.5.0",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-controls": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
     "@storybook/addon-ondevice-actions": "6.0.1-beta.9",
     "@storybook/addon-ondevice-backgrounds": "6.0.1-beta.9",
-    "@storybook/addon-ondevice-controls": "6.0.1-beta.9",
+    "@storybook/addon-ondevice-controls": "6.0.1-alpha.0",
     "@storybook/addon-ondevice-notes": "6.0.1-beta.9",
     "@storybook/addon-react-native-web": "^0.0.19",
     "@storybook/react": "^6.5",
     "@storybook/react-native": "6.0.1-beta.9",
-    "@storybook/addon-a11y": "^6.5.0",
-    "@storybook/addon-interactions": "^6.5.0",
-    "@storybook/addon-jest": "^6.5.0",
-    "@storybook/addon-storysource": "^6.5.0",
-    "@storybook/builder-webpack5": "^6.5.13",
-    "@storybook/docs-tools": "^6.5.0",
-    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-jest": "^6.5.15",
+    "@storybook/addon-storysource": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/docs-tools": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.0",
+    "@storybook/theming": "^6.5.15",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-native-web": "^0.18.10",
     "expo": "^47.0.0",
@@ -56,7 +55,6 @@
     "sass-loader": "^13.2.0",
     "storybook-addon-designs": "^6.3.1",
     "storybook-addon-grid": "^0.3.1",
-    "storybook-addon-pseudo-states": "^1.15.2",
     "storybook-usage": "^4.0.10",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3"
