--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "expo-storybook-starter",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "react-native-flex-grid",
+  "version": "0.0.1",
+  "main": "main/index.ts",
   "scripts": {
     "start": "yarn update-stories; expo start",
     "android": "yarn update-stories; expo start --android",
