--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-native-flex-grid",
   "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
+  "module": "src/index.ts",
   "scripts": {
     "start": "yarn update-stories; expo start",
     "android": "yarn update-stories; expo start --android",
@@ -11,7 +12,8 @@
     "update-stories": "sb-rn-get-stories --config-path .storybook-ondevice",
     "storybook-watcher": "sb-rn-watcher --config-path .storybook-ondevice",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepublish": "node ./scripts/prep-package.js"
   },
   "dependencies": {},
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
+    "@rogerpence/edit-package-json": "^1.1.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-controls": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
@@ -42,6 +45,7 @@
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-native-web": "^0.18.10",
+    "edit-json-file": "^1.7.0",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
     "postcss": "^8.4.20",
