--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "react-native-flex-grid",
   "version": "0.0.1",
-  "main": "node_modules/expo/AppEntry.js",
-  "module": "src/index.ts",
+  "main": "lib/commonsjs/index.js",
+  "module": "lib/module/index.js",
+  "react-native": "src/index.ts",
+  "files": [
+    "src",
+    "lib"
+  ],
   "scripts": {
     "start": "yarn update-stories; expo start",
     "android": "yarn update-stories; expo start --android",
@@ -13,7 +18,8 @@
     "storybook-watcher": "sb-rn-watcher --config-path .storybook-ondevice",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepublish": "node ./scripts/prep-package.js"
+    "prepublish": "node ./scripts/prep-package.js",
+    "prepare": "bob build"
   },
   "dependencies": {},
   "devDependencies": {
@@ -22,7 +28,6 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
-    "@rogerpence/edit-package-json": "^1.1.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-controls": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
@@ -42,6 +47,7 @@
     "@storybook/react-native": "6.0.1-beta.9",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/theming": "^6.5.15",
+    "@types/jest": "^29.2.4",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-native-web": "^0.18.10",
@@ -53,6 +59,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-builder-bob": "^0.20.3",
     "react-native-safe-area-context": "4.4.1",
     "react-native-web": "~0.18.7",
     "resolve-url-loader": "^5.0.0",
@@ -63,6 +70,20 @@
     "storybook-usage": "^4.0.10",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3"
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      [
+        "commonjs",
+        {
+          "copyFlow": true
+        }
+      ],
+      "module",
+      "typescript"
+    ]
   },
   "private": true
 }
