--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "emitDeclarationOnly": false,
     "noEmit": false,
     "rootDir": "src",
-    // "declaration": true,
+    "declaration": true,
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017", "es2021"],
@@ -12,8 +12,7 @@
     "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "composite":true
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": [
