--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -8,30 +8,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
+      - uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ubuntu-latest-node-16.x-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ubuntu-latest-node-12.x-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ubuntu-latest-node-16.x-yarn-
-      - uses: actions/setup-node@v2
+            ubuntu-latest-node-12.x-yarn-
+      - uses: actions/setup-node@v1
         with:
-          node-version: 16.x
+          node-version: 12.x
           registry-url: https://registry.npmjs.org/
       - name: Install
         run: yarn install
       - name: Test
         run: yarn test --ci --bail
+      - name: Test TypeScript Type Definitions
+        run: yarn test:typescript
       - name: Build
         run: NODE_ENV=production yarn build
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./coverage
 
   release_publish:
     name: Release to Github and publish to NPM
@@ -40,19 +38,19 @@ jobs:
     if: success() && github.ref == 'refs/heads/main'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
+      - uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ubuntu-latest-node-16.x-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ubuntu-latest-node-12.x-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ubuntu-latest-node-16.x-yarn-
-      - uses: actions/setup-node@v2
+            ubuntu-latest-node-12.x-yarn-
+      - uses: actions/setup-node@v1
         with:
-          node-version: 16.x
+          node-version: 12.x
           registry-url: https://registry.npmjs.org/
       - name: Install
         run: yarn install
@@ -65,15 +63,15 @@ jobs:
           PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
           echo ::set-output name=PACKAGE_VERSION::$PACKAGE_VERSION
           # Set COMMIT_LOG
-          COMMIT_LOG=`git log $(git describe --tags --abbrev=0)..HEAD --date=iso-local --format='%cd %h %an - %s  '`
+          COMMIT_LOG=`git log $(git describe --tags --abbrev=0)..HEAD --format='%s - %an'`
           echo ::set-output name=COMMIT_LOG::$COMMIT_LOG
-      - name: npm publish
-        run: npm publish --access restricted
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.ownEnvVars.outputs.PACKAGE_VERSION }}
           commit: main
           body: ${{ steps.ownEnvVars.outputs.COMMIT_LOG }}
+      - name: npm publish
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
