--- a/package.json
+++ b/package.json
@@ -89,6 +89,10 @@
     "ts-jest": "^29.0.3",
     "typescript": "^4.6.3"
   },
+  "peerDependencies": {
+    "react": ">17",
+    "react-native": ">0.60"
+  },
   "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
