--- a/package.json
+++ b/package.json
@@ -129,5 +129,12 @@
     "customizable",
     "configurable"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Ahmed Tarek",
+      "email": "ahmed.tokyo1@gmail.com",
+      "url": "https://github.com/A-Tokyo"
+    }
+  ]
 }
