--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.5",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
