--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "react-native-flex-grid",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "node_modules/expo/AppEntry.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
   "files": [
     "src",
-    "lib"
+    "lib",
+    "!**/stories.*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/a-tokyo/react-native-flex-grid.git"
+  },
+  "homepage": "https://react-native-flex-grid.netlify.app",
+  "bugs": {
+    "url": "https://github.com/a-tokyo/react-native-flex-grid/issues"
+  },
   "scripts": {
     "start": "yarn prep-package expo; yarn update-stories; expo start",
     "android": "yarn prep-package expo; yarn update-stories; expo start --android",
@@ -16,7 +25,7 @@
     "build": "bob build",
     "prep-package": "node ./scripts/prep-package.js",
     "prepublish": "yarn prep-package build",
-    "test": "yarn",
+    "test": "jest",
     "eject": "expo eject",
     "update-stories": "sb-rn-get-stories --config-path .storybook-ondevice",
     "storybook-watcher": "sb-rn-watcher --config-path .storybook-ondevice",
@@ -49,13 +58,19 @@
     "@storybook/react-native": "6.0.1-beta.9",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/theming": "^6.5.15",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.4",
     "@types/react-native": "~0.70.6",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-native-web": "^0.18.10",
     "edit-json-file": "^1.7.0",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
+    "jest": "^29.3.1",
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
     "react": "18.1.0",
@@ -64,6 +79,7 @@
     "react-native-builder-bob": "^0.20.3",
     "react-native-safe-area-context": "4.4.1",
     "react-native-web": "~0.18.7",
+    "react-test-renderer": "^18.2.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
@@ -71,7 +87,12 @@
     "storybook-addon-grid": "^0.3.1",
     "storybook-usage": "^4.0.10",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.6.3"
+  },
+  "peerDependencies": {
+    "react": ">16",
+    "react-native": ">0.60"
   },
   "react-native-builder-bob": {
     "source": "src",
@@ -86,5 +107,35 @@
       "module",
       "typescript"
     ]
-  }
+  },
+  "keywords": [
+    "react",
+    "react-native",
+    "react-native-web",
+    "grid",
+    "layout",
+    "flex",
+    "flexbox",
+    "design",
+    "style",
+    "bootstrap",
+    "12-columns",
+    "n-columns",
+    "demo",
+    "storybook",
+    "typescript",
+    "flowtype",
+    "expo",
+    "framework",
+    "customizable",
+    "configurable"
+  ],
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Ahmed Tarek",
+      "email": "ahmed.tokyo1@gmail.com",
+      "url": "https://github.com/A-Tokyo"
+    }
+  ]
 }
