--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepublish": "yarn prep-package build",
     "test": "jest",
     "eject": "expo eject",
-    "update-stories": "sb-rn-get-stories --config-path .storybook-ondevice",
+    "update-stories": "node ./scripts/prep-story-readme.js; sb-rn-get-stories --config-path .storybook-ondevice",
     "storybook-watcher": "sb-rn-watcher --config-path .storybook-ondevice",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
