--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "eject": "expo eject",
     "update-stories": "node ./scripts/prep-story-readme.js; sb-rn-get-stories --config-path .storybook-ondevice",
     "storybook-watcher": "sb-rn-watcher --config-path .storybook-ondevice",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "yarn update-stories; start-storybook -p 6006",
+    "build-storybook": "yarn update-stories; build-storybook"
   },
   "dependencies": {},
   "devDependencies": {
