--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     {
       "name": "Ahmed Tarek",
       "email": "ahmed.tokyo1@gmail.com",
-      "url": "https://github.com/A-Tokyo"
+      "url": "https://github.com/a-tokyo"
     }
   ]
 }
