--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "react-native": "src/index.ts",
   "files": [
     "src",
-    "lib",
-    "!**/stories.*"
+    "lib"
   ],
   "repository": {
     "type": "git",
