--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "files": [
     "src",
     "lib",
-    "!lib/**/*.stories.js"
+    "!**/*.stories.js"
   ],
   "repository": {
     "type": "git",
