--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-flex-grid",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "🎨 A react-native flexbox grid similar to bootstap's web grid.",
-  "main": "lib/commonsjs/index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
   "files": [
