--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "react": ">16",
-    "react-native": ">0.60"
+    "react": "*",
+    "react-native": "*"
   },
   "react-native-builder-bob": {
     "source": "src",
