--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
+  "types": "lib/typescript/index.d.ts",
   "files": [
     "src",
     "lib"
