:sparkles: deploy to gh pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build
-        run: ${{ steps.detect-package-manager.outputs.runner }} storybook-build
+        run: ${{ steps.detect-package-manager.outputs.runner }} build-storybook
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
