:sparkles: add expo cloud

--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -25,6 +27,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3807884a-2b7a-4361-ac50-f34fd8ec59b8"
+      }
+    },
+    "owner": "a-tokyo"
   }
 }
